               calculated due to the missing R0 point the function
               stopped with an error. Corrected,

             • function now how to deal with a ‘list’ of
               ‘RLum.Analysis’ objects and will re-call itself as
               elements are in the ‘list’ (argument ‘object’). In
               particular cases this may lead to a tremendous efficient
               data analysis process.

         • ‘calc_Statistics()’

             • Weighted median is now completly removed from the
               calculation, values is replaced by the unweighted
               median.

         • ‘fit_LMCurve()’

             • Argument ‘output.plot’ renamed to ‘plot’,

             • argument ‘output.plotBG’ renamed to ‘plot.BG’,

             • arguemtn ‘output.terminal’ renamed to ‘verbose’,

             • argument ‘output.path’ removed without replacement,
               corresponding code has been removed from the function,

             • argument ‘cex.global’ removed, scaling can be still used
               via ‘cex’

             • argument ‘output.terminaladvanced’ has been removed
               without replacement, terminal output can just be
               triggered via ‘verbose’,

             • new argument added ‘fit.method’. Argument works similar
               as in ‘fit_CWCurve()’ and allows to use the
               Levenberg-Marquardt algorithm for fitting (addressing
               #55)

             • new return data object added ‘call’ containing the
               original function call.

         • ‘plot_AbanicoPlot()’

             • Further adjustment to deal with zero values (will now be
               removed automatically)

         • ‘plot_GrowthCurve()’

             • Final fitting and fitting during the MC runs is now done
               using the Levenberg-Marquardt from the package
               'minpack.lm'. This increases the fitting stability and
               the computation step markedly (#5),
